# CMdSpiTest

./: CMakeLists.txt  CMdSpi.cpp  CMdSpi.h  CTP  CustomMdSpi.cpp  CustomMdSpi.h  MakeFile (copy)  TradingDay.con  cu1803_market_data.csv  cu1804_market_data.csv  main.cpp  makefile
CTP_API/: CMakeLists.txt
doc/: config.ini
inc/: CMdSpi.h  Ini.h
lib/: libCMdSpi.so.1  libCMdSpi.so.1.2
src/: CMakeLists.txt  CMdSpi.cpp  CTraderSpi.cpp  Ini.cpp  TraderSpi.cpp  main.cpp
